# ersatz-pointer

./: ErsatzPointer.hs  README.md  ersatz-pointer.cabal  oink.hs
