cabal-version: 2.2

author: Mitchell Rosen
bug-reports: https://github.com/awkward-squad/ersatz-pointer/issues
category: Concurrency
copyright: Copyright (C) 2020-2022 Mitchell Rosen, Travis Staton
description: A friendly interface to weak pointers in GHC.
homepage: https://github.com/awkward-squad/ersatz-pointer
license: BSD-3-Clause
license-file: LICENSE
maintainer: Mitchell Rosen <mitchellwrosen@gmail.com>, Travis Staton <hello@travisstaton.com>
name: ersatz-pointer
stability: experimental
synopsis: A friendly interface to weak pointers in GHC
version: 0.3.0

extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type: git
  location: https://github.com/awkward-squad/ersatz-pointer.git

library
  build-depends: base ^>= 4.12 || ^>= 4.13 || ^>= 4.14 || ^>= 4.15 || ^>= 4.16
  default-language: Haskell2010
  exposed-modules: ErsatzPointer
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-import-lists
    -Wno-safe
    -Wno-unsafe
  if impl(ghc >= 8.10)
    ghc-options:
      -Wno-missing-safe-haskell-mode
      -Wno-prepositive-qualified-module
  if impl(ghc >= 9.2)
    ghc-options:
      -Wno-missing-kind-signatures
