cabal-version: 2.2

author: Mitchell Rosen
bug-reports: https://github.com/awkward-squad/ersatz-pointer/issues
category: Concurrency
copyright: Copyright (C) Mitchell Rosen, Travis Staton
description: A safe and friendly interface to weak pointers in GHC.
homepage: https://github.com/awkward-squad/ersatz-pointer
license: BSD-3-Clause
license-file: LICENSE
maintainer: Mitchell Rosen <mitchellwrosen@gmail.com>, Travis Staton <hello@travisstaton.com>
name: ersatz-pointer
stability: experimental
synopsis: A friendly interface to weak pointers in GHC
version: 0.1.0

extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type: git
  location: https://github.com/awkward-squad/ersatz-pointer.git

library
  build-depends: base ^>= 4.16 || ^>= 4.17
  default-language: GHC2021
  exposed-modules: ErsatzPointer
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-import-lists
    -Wno-missing-kind-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-prepositive-qualified-module
    -Wno-safe
    -Wno-unsafe
